--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/ArgosAPTKiosk Install.exe
+/ArgosAPTKiosk Install.exe.txt
